# career_conversation

./: README.md  main.py  pyproject.toml  requirements.txt
me/: summary.txt
