[project]
name = "career-conversation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=5.42.0",
    "openai>=1.99.6",
    "openai-agents>=0.2.5",
    "pypdf>=5.9.0",
    "requests>=2.32.4",
]
